# rust-lv2-more-examples

./: Cargo.toml  LICENSE.md  README.md  test_worker.sh
eg-preset-rs/: Cargo.toml  README.md  eg-preset-rs.ttl  manifest.ttl  presets.ttl
eg-preset-rs/src/: lib.rs
eg-worker-rs/: Cargo.toml  README.md  manifest.ttl  manifest.ttl.in  worker.ttl
eg-worker-rs/src/: lib.rs
rust-lv2/: Cargo.toml
rust-lv2/core/src/plugin/: mod.rs
worker/: Cargo.toml  manifest.ttl  worker.ttl
worker/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
